--- a/index.html
+++ b/index.html
@@ -54,15 +54,17 @@
 <body>
   <div id="app">
     <div class="container">
-      <h1 class="text-center mb-4">專案作品</h1>
+      <h1 class="text-center mb-4">九九天地</h1>
       
-      <!-- 六壬趣味算命系統 -->
+      <!-- 摘星特效包 -->
       <div class="result-box">
-        <h2>六壬趣味算命系統</h2>
+        <h2>摘星特效包</h2>
         <div class="mb-3">
           <p>
-            WEB展示網址：<a href="https://maymoss.github.io/test.github.io/liurenpro.html" target="_blank" class="btn btn-outline-primary">
-              https://maymoss.github.io/test.github.io/liurenpro.html
+            說明：
+            1.版本歸原作者(Brooks99)所有
+            2.此程式為研究學習設計思想和原理為目的，絕沒有故意侵權或惡意抄襲、篡改遊戲內容！
+            3.裡面包裝之特效皆為廣大網友以及盟友無私奉獻，故嚴禁用於任何商業行為。
             </a>
           </p>
           <p>
