--- a/index.html
+++ b/index.html
@@ -68,8 +68,17 @@
             </a>
           </p>
           <p>
-            安卓展示：<a href="https://maymoss.github.io/test.github.io/quweishensuanliuren.html" target="_blank" class="btn btn-outline-primary">
-              https://maymoss.github.io/test.github.io/quweishensuanliuren.html
+            版本：
+            .359 特效->黑色介面。調整獨立下拉式選項
+            .359 特校->黑色介面->新增完整介面包
+            .359 增加 王表(需手動點更新，需先請有權限的人從網路更新後，程式的才會更新)
+            .360 調整->取消錯誤顯示，不在顯示序號以及詳細錯誤碼
+            .361 特效->箭矢特效更換為橘色特效
+            .362 修正->讀取EXCEL錯誤之問題 
+            .363 增加->木乃伊明顯化
+                                聖界_魔屏狀態中文字
+                                魔法、狀態圖示更新
+            .364 增加->精準射擊中文明顯化
             </a>
           </p>
         </div>
