--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="icon" href="https://maymoss.github.io/test.github.io/9ghfo-83t22-001.ico" type="image/png" sizes="32x32">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="https://maymoss.github.io/test.github.io/9ghfo-83t22-001.ico" type="image/png" sizes="32x32">
   <title>九九天地</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -54,7 +55,7 @@
 <body>
   <div id="app">
     <div class="container">
-      <h1 class="text-center mb-4">九九天地</h1>
+      <h1 class="text-center mb-4"><link rel="icon" href="https://maymoss.github.io/test.github.io/9ghfo-83t22-001.ico" type="image/png" sizes="32x32">九九天地</h1>
       
       <!-- 摘星特效包 -->
       <div class="result-box">
@@ -73,8 +74,8 @@
             <ol>
                 <ol>
                     .359 特效->黑色介面。調整獨立下拉式選項
-                    <ol>.359 特校->黑色介面->新增完整介面包</ol>
-                    <ol>.359 增加 王表(需手動點更新，需先請有權限的人從網路更新後，程式的才會更新)</ol>
+                    <ol>特校->黑色介面->新增完整介面包</ol>
+                    <ol>增加 王表(需手動點更新，需先請有權限的人從網路更新後，程式的才會更新)</ol>
                 </ol>
                 <ol>.360 調整->取消錯誤顯示，不在顯示序號以及詳細錯誤碼</ol>
                 <ol>.361 特效->箭矢特效更換為橘色特效</ol>
@@ -83,7 +84,7 @@
                     .363 增加->木乃伊明顯化
                     <ol>聖界_魔屏狀態中文字</ol>
                     <ol>魔法、狀態圖示更新</ol>
-                </p>
+                </ol>
                 <ol>.364 增加->精準射擊中文明顯化</ol>
             </ol>
           </p>
