--- a/index.html
+++ b/index.html
@@ -64,29 +64,27 @@
           <p>
             說明：
             <ol>
-                <p>1.版本歸原作者(Brooks99)所有</p>
-                <p>2.此程式為研究學習設計思想和原理為目的，絕沒有故意侵權或惡意抄襲、篡改遊戲內容！</p>
-                <p>3.裡面包裝之特效皆為廣大網友以及盟友無私奉獻，故嚴禁用於任何商業行為。</p>
+                <ol>1.版本歸原作者(Brooks99)所有</ol>
+                <ol>2.此程式為研究學習設計思想和原理為目的，絕沒有故意侵權或惡意抄襲、篡改遊戲內容！</ol>
+                <ol>3.裡面包裝之特效皆為廣大網友以及盟友無私奉獻，故嚴禁用於任何商業行為。</ol>
             </ol>            
           </p>
           <p>
             版本：
             <ol>
-                <ol>
-                    .359 特效->黑色介面。調整獨立下拉式選項
-                    <ol>特校->黑色介面->新增完整介面包</ol>
-                    <ol>增加 王表(需手動點更新，需先請有權限的人從網路更新後，程式的才會更新)</ol>
-                </ol>
-                <ol>.360 調整->取消錯誤顯示，不在顯示序號以及詳細錯誤碼</ol>
-                <ol>.361 特效->箭矢特效更換為橘色特效</ol>
-                <ol>.362 修正->讀取EXCEL錯誤之問題</ol>
-                <ol>
-                    .363 增加->木乃伊明顯化
-                    <ol>聖界_魔屏狀態中文字</ol>
-                    <ol>魔法、狀態圖示更新</ol>
-                </ol>
-                <ol>.364 增加->精準射擊中文明顯化</ol>
+                .359 特效->黑色介面。調整獨立下拉式選項
+                <ol>特校->黑色介面->新增完整介面包</ol>
+                <ol>增加 王表(需手動點更新，需先請有權限的人從網路更新後，程式的才會更新)</ol>
             </ol>
+            <ol>.360 調整->取消錯誤顯示，不在顯示序號以及詳細錯誤碼</ol>
+            <ol>.361 特效->箭矢特效更換為橘色特效</ol>
+            <ol>.362 修正->讀取EXCEL錯誤之問題</ol>
+            <ol>
+                .363 增加->木乃伊明顯化
+                <ol>聖界_魔屏狀態中文字</ol>
+                <ol>魔法、狀態圖示更新</ol>
+            </ol>
+            <ol>.364 增加->精準射擊中文明顯化</ol>
           </p>
         </div>
     </div>
