--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
   <div id="app">
     <div class="container">
-      <h1 class="text-center mb-4"><link rel="icon" href="https://maymoss.github.io/test.github.io/9ghfo-83t22-001.ico" type="image/png" sizes="32x32">九九天地</h1>
+      <h1 class="text-center mb-4"><img src="https://maymoss.github.io/test.github.io/9ghfo-83t22-001.ico" alt="九九天地" style="width:32px;height:32px;vertical-align:middle;margin-right:10px;">九九天地</h1>
       
       <!-- 摘星特效包 -->
       <div class="result-box">
