--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
             </ol>
             <ol>.364 增加->精準射擊中文明顯化</ol>
           </p>
+          <p>
+            <ol><a href="https://drive.google.com/file/d/1TKeU7ebkPkYXQiQ4vIOcVOVvRvUgd8pe/view?usp=drive_link">特效包下載....</a></ol>
+            <ol><a href="https://www.tiktok.com/@user19451629863815/video/7542379925689437448">教學檔....</a></ol>
+          </p>
         </div>
     </div>
       
