--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
 	<div id="app">
 		<div class="container">
-			<h1 class="text-center mb-4"><img src="https://maymoss.github.io/test.github.io/9ghfo-83t22-001.ico" alt="九九天地" style="width:90px;height:90px;vertical-align:middle;margin-right:10px;"></h1>
+			<h1 class="text-center mb-4"><img src="https://maymoss.github.io/Linpic.io/99-removebg-preview.png" alt="九九天地" style="width:150px;height:150px;vertical-align:middle;margin-right:10px;"></h1>
 
 			<!-- 摘星特效包 -->
 			<div class="result-box">
