--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
 						<ol>.364 增加->精準射擊中文明顯化</ol>
 					</p>
 					<p>
-						<ol><h1><a href="https://drive.google.com/file/d/1TKeU7ebkPkYXQiQ4vIOcVOVvRvUgd8pe/view?usp=drive_link" target="_blank">特效包下載....</a></h1></ol>
-						<ol><h1><a href="https://www.tiktok.com/@user19451629863815/video/7542379925689437448" target="_blank">教學檔....</a></h1></ol>
+						<ul>
+							<li><h1><a href="https://drive.google.com/file/d/1TKeU7ebkPkYXQiQ4vIOcVOVvRvUgd8pe/view?usp=drive_link" target="_blank">特效包下載....</a></h1></li>
+							<li><h1><a href="https://www.tiktok.com/@brooks99miao/video/7542379925689437448" target="_blank">教學檔.....</a></h1></li>
+						</ul>
 					</p>
 				</div>
 			</div>
